--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,94 @@
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+body {
+  background: rgb(252,92,125);
+  background: linear-gradient(0deg, rgba(252,92,125,1) 0%, rgba(106,130,251,1) 100%);
+}
+
 .App {
+  margin: 0;
+}
+
+.container {
+  background-color: white;
+  width: 40%;
+  margin: 0 auto;
+  border-radius: 10px;
+  padding: 15px 25px 25px 25px;
+}
+
+.title {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.delete {
+  height: 50px;
+  text-decoration: none;
+  border: none;
+  float: right;
+  width: 50px;
+  background-color: #d42849;
+  font-size: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.delete:hover {
+  background-color: red;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin: 0 auto;
+  border-radius: 10px;
+  height: 400px;
+  overflow-y: scroll;
+  display: block;
 }
 
-.App-link {
-  color: #61dafb;
+input {
+  height: 30px;
+  width: 75px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.add {
+  height: 36px;
+  width: 40px;
+  float: right;
+}
+
+tbody {
+  width: 100%;
+  display: table;
+}
+
+tr {
+  background-color: white;
+  width: 100%;
+  display: block;
+  border-bottom: 1px solid grey;
+}
+
+td {
+  width: 5%;
+}
+
+form {
+  width: 40%;
+  margin: 20px auto 0 auto;
+  border-radius: 10px;
+}
+
+.name p {
+  width: 100px;
+  overflow: hidden;
+}
+
+.nothing {
+  text-align: center;
+  margin: 100px 0;
+  font-style: italic;
+  color: gray;
 }
